AC_INIT(leon,1.0)
AC_CONFIG_SRCDIR(src/group.h)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(src/leon_config.h)
AC_CHECK_SIZEOF(int)

AC_PROG_INSTALL

AC_PROG_CC
AC_LANG_C
AC_PROG_MAKE_SET

AC_HEADER_STDC

dnl maybe AC_CHECK_HEADERS or AC_CHECK_FUNCS to verify existence of needed things...

AC_OUTPUT(Makefile)
